publishing to topic04-functions

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ figcaption
     
     <div class="header">
       <a class="item" href="topic02-first-steps/index.html">
-         First Steps
+         First Steps in using GCHi and Haskell
       </a>
     </div>
     <div class="menu">
@@ -275,7 +275,7 @@ figcaption
 
     <div class="center aligned content">
       <div class="right floated meta"><i class="huge sitemap icon"></i></div>
-      <div class="header">  First Steps</div>
+      <div class="header">  First Steps in using GCHi and Haskell</div>
     </div>
 
     
