--- a/topic02-first-steps/book/index.html
+++ b/topic02-first-steps/book/index.html
@@ -115,7 +115,7 @@ body
   <header class="header item">
     <i id="toc" class="sitemap icon"></i>
     <a href="../index.html">
-       First Steps
+       First Steps in using GCHi and Haskell
     </a>
   </header>
   <div class="right tab-menu menu">
