--- a/topic02-first-steps/index.html
+++ b/topic02-first-steps/index.html
@@ -70,7 +70,7 @@ figcaption
     
 
     <div class="ui five wide column">
-      <h2>  First Steps </h2>
+      <h2>  First Steps in using GCHi and Haskell </h2>
     </div>
 
     <div class="ui two wide column">
