publishing to topic04-functions

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ figcaption
       
       <div class="menu">
         <a class="item" href="topic02-first-steps/talk-2/b-exercises-first-steps.pdf">
-          Exercises </a>
+          Exercises on First Steps</a>
       </div>
       
       <div class="menu">
