--- a/talkwall.html
+++ b/talkwall.html
@@ -232,7 +232,7 @@ figcaption
 
     <div class="center aligned content">
       <div class="right floated meta"><i class="huge object group icon"></i></div>
-      <div class="header"> Exercises </div>
+      <div class="header"> Exercises on First Steps</div>
     </div>
 
     
