--- a/topic02-first-steps/indexmoodle.html
+++ b/topic02-first-steps/indexmoodle.html
@@ -51,7 +51,7 @@ figcaption
 
     <div class="center aligned content">
       <div class="right floated meta"><i class="huge object group icon"></i></div>
-      <div class="header"> First Steps</div>
+      <div class="header"> First Steps</div>
     </div>
 
     
@@ -86,7 +86,7 @@ figcaption
 
     <div class="center aligned content">
       <div class="right floated meta"><i class="huge object group icon"></i></div>
-      <div class="header"> Exercises </div>
+      <div class="header"> Exercises on First Steps</div>
     </div>
 
     
