publising lecture on types and classes

--- a/topic08-declaring-types-and-classes/indexmoodle.html
+++ b/topic08-declaring-types-and-classes/indexmoodle.html
@@ -51,21 +51,21 @@ figcaption
 
     <div class="center aligned content">
       <div class="right floated meta"><i class="huge object group icon"></i></div>
-      <div class="header"> Introduction</div>
+      <div class="header">  Declaring Types and Classes</div>
     </div>
 
     
-    <a class="ui raised link card" href="http://maireadmeagher.github.io/haskell-17/topic01-introduction/talk-1/a-introduction-to-haskell.pdf" target="_blank">
+    <a class="ui raised link card" href="http://maireadmeagher.github.io/haskell-17/topic08-declaring-types-and-classes/talk-1/a-type-classes.pdf" target="_blank">
     
       <div class="image">
-        <img class="ui bordered rounded image" src="http://maireadmeagher.github.io/haskell-17/topic01-introduction/talk-1/a-introduction-to-haskell.png">
+        <img class="ui bordered rounded image" src="http://maireadmeagher.github.io/haskell-17/topic08-declaring-types-and-classes/talk-1/a-type-classes.jpg">
       </div>
     </a>
 
 
     <div class="center aligned content">
       <div class="description">
-        <p>Introduction to Functional Programming and Haskell.</p>
+        <p>Declaring Types and Classes</p>
 
       </div>
     </div>
